--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,7 @@
             "email": "coco214034@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "nesbot/carbon":"^1.21"
+    }
 }
